--- a/templates/admin.html.twig
+++ b/templates/admin.html.twig
@@ -81,62 +81,57 @@
                     </a>
 
                 </li>
-                <li class="sidebar-item">
-                    <a data-bs-target="#pages" data-bs-toggle="collapse" class="sidebar-link collapsed">
-                        <i class="align-middle" data-feather="layout"></i> <span class="align-middle">Pages</span>
-                    </a>
-                    <ul id="pages" class="sidebar-dropdown list-unstyled collapse " data-bs-parent="#sidebar">
-                        <li class="sidebar-item"><a class="sidebar-link" href="pages-profile.html">Profile</a></li>
-                        <li class="sidebar-item"><a class="sidebar-link" href="pages-settings.html">Settings</a></li>
-                        <li class="sidebar-item"><a class="sidebar-link" href="pages-clients.html">Clients</a></li>
-                        <li class="sidebar-item">
-                            <a data-bs-target="#projects" data-bs-toggle="collapse" class="sidebar-link collapsed">
-                                Projects
-                            </a>
-                            <ul id="projects" class="sidebar-dropdown list-unstyled collapse ">
-                                <li class="sidebar-item">
-                                    <a class="sidebar-link" href="pages-projects-list.html">List</a>
-                                </li>
-                                <li class="sidebar-item">
-                                    <a class="sidebar-link" href="pages-projects-detail.html">Detail <span class="badge badge-sidebar-primary">New</span></a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li class="sidebar-item"><a class="sidebar-link" href="pages-invoice.html">Invoice</a></li>
-                        <li class="sidebar-item"><a class="sidebar-link" href="pages-pricing.html">Pricing</a></li>
-                        <li class="sidebar-item"><a class="sidebar-link" href="pages-tasks.html">Tasks</a></li>
-                        <li class="sidebar-item"><a class="sidebar-link" href="pages-chat.html">Chat <span class="badge badge-sidebar-primary">New</span></a></li>
-                        <li class="sidebar-item"><a class="sidebar-link" href="pages-blank.html">Blank Page</a></li>
-                    </ul>
-                </li>
-                <li class="sidebar-item">
-                    <a data-bs-target="#auth" data-bs-toggle="collapse" class="sidebar-link collapsed">
-                        <i class="align-middle" data-feather="users"></i> <span class="align-middle">Auth</span>
-                        <span class="badge badge-sidebar-secondary">Special</span>
-                    </a>
-                    <ul id="auth" class="sidebar-dropdown list-unstyled collapse " data-bs-parent="#sidebar">
-                        <li class="sidebar-item"><a class="sidebar-link" href="pages-sign-in.html">Sign In</a></li>
-                        <li class="sidebar-item"><a class="sidebar-link" href="pages-sign-up.html">Sign Up</a></li>
-                        <li class="sidebar-item"><a class="sidebar-link" href="pages-reset-password.html">Reset Password</a></li>
-                        <li class="sidebar-item"><a class="sidebar-link" href="pages-404.html">404 Page</a></li>
-                        <li class="sidebar-item"><a class="sidebar-link" href="pages-500.html">500 Page</a></li>
-                    </ul>
-                </li>
+
 
 
                 <li class="sidebar-header">
                     Tools & Components
                 </li>
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<li class="sidebar-item active">
+						<a class="sidebar-link" href="{{ path('admin_utilisateurs') }}">
+             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-users align-middle"><path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path><circle cx="9" cy="7" r="4"></circle><path d="M23 21v-2a4 4 0 0 0-3-3.87"></path><path d="M16 3.13a4 4 0 0 1 0 7.75"></path></svg> <span class="align-middle">Users</span>
+             
+            </a>
+					</li>
+
                 <li class="sidebar-item">
-                    <a data-bs-target="#charts" data-bs-toggle="collapse" class="sidebar-link collapsed">
-                        <i class="align-middle" data-feather="pie-chart"></i> <span class="align-middle">Charts</span>
+                    <a class="sidebar-link" href="{{ path('commentaire_index') }}">
+                        <i class="align-middle" data-feather="pie-chart"></i> <span class="align-middle">Commentaire</span>
                         <span class="badge badge-sidebar-primary">New</span>
                     </a>
-                    <ul id="charts" class="sidebar-dropdown list-unstyled collapse " data-bs-parent="#sidebar">
-                        <li class="sidebar-item"><a class="sidebar-link" href="charts-chartjs.html">Chart.js</a></li>
-                        <li class="sidebar-item"><a class="sidebar-link" href="charts-apexcharts.html">ApexCharts <span class="badge badge-sidebar-primary">New</span></a></li>
-                    </ul>
+                  
+        
+
+
+
+
+
+
+
+
+
                 </li>
                 <li class="sidebar-item">
                     <a class="sidebar-link" href="notifications.html">
@@ -200,13 +195,9 @@
 
             <div class="sidebar-cta">
                 <div class="sidebar-cta-content">
-                    <strong class="d-inline-block mb-2">Monthly Sales Report</strong>
-                    <div class="mb-3 text-sm">
-                        Your monthly sales report is ready for download!
-                    </div>
 
                     <div class="d-grid">
-                        <a href="https://themes.getbootstrap.com/product/appstack-responsive-admin-template/" class="btn btn-primary" target="_blank">Download</a>
+                        <a href="{{ path('app_logout') }}" class="btn btn-primary" target="_blank">Deconnexion</a>
                     </div>
                 </div>
             </div>
@@ -400,10 +391,10 @@
                         </a>
 
                         <a class="nav-link dropdown-toggle d-none d-sm-inline-block" href="#" data-bs-toggle="dropdown">
-                            <img src="{{('adminT/img/avatars/avatar.jpg')}}" class="avatar img-fluid rounded-circle me-1" alt="Chris Wood" /> <span class="text-dark">Chris Wood</span>
+                            <img src="{{('adminT/img/avatars/avatar.jpg')}}" class="avatar img-fluid rounded-circle me-1" /> <span class="text-dark">brahime</span>
                         </a>
                         <div class="dropdown-menu dropdown-menu-end">
-                            <a class="dropdown-item" href="pages-profile.html"><i class="align-middle me-1" data-feather="user"></i> Profile</a>
+                            <a class="dropdown-item" href=""><i class="align-middle me-1" data-feather="user"></i> Profile</a>
                             <a class="dropdown-item" href="#"><i class="align-middle me-1" data-feather="pie-chart"></i> Analytics</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="pages-settings.html">Settings & Privacy</a>
@@ -414,7 +405,7 @@
                 </ul>
             </div>
         </nav>
-
+        {% block content %}
         <main class="content">
 
             <div class="container-fluid p-0">
@@ -423,7 +414,7 @@
                     <div class="col-auto d-none d-sm-block">
                         <h3>Dashboard</h3>
                     </div>
-                    {% block content %}
+
                     <div class="col-auto ms-auto text-end mt-n1">
 
                         <div class="dropdown me-2 d-inline-block">
@@ -456,7 +447,7 @@
                                 <div class="row g-0 w-100">
                                     <div class="col-6">
                                         <div class="illustration-text p-3 m-1">
-                                            <h4 class="illustration-text">Welcome Back, Chris!</h4>
+                                            <h4 class="illustration-text">Welcome Back, Brahim</h4>
                                             <p class="mb-0">AppStack Dashboard</p>
                                         </div>
                                     </div>
@@ -534,141 +525,7 @@
 
 
 
-                <div class="row">
-                    <div class="col-12 col-lg-6 col-xl-4 d-flex">
-                        <div class="card flex-fill">
-                            <div class="card-header">
-                                <div class="card-actions float-end">
-                                    <div class="dropdown position-relative">
-                                        <a href="#" data-bs-toggle="dropdown" data-bs-display="static">
-                                            <i class="align-middle" data-feather="more-horizontal"></i>
-                                        </a>
 
-                                        <div class="dropdown-menu dropdown-menu-end">
-                                            <a class="dropdown-item" href="#">Action</a>
-                                            <a class="dropdown-item" href="#">Another action</a>
-                                            <a class="dropdown-item" href="#">Something else here</a>
-                                        </div>
-                                    </div>
-                                </div>
-                                <h5 class="card-title mb-0">Calendar</h5>
-                            </div>
-                            <div class="card-body d-flex">
-                                <div class="align-self-center w-100">
-                                    <div class="chart">
-                                        <div id="datetimepicker-dashboard"></div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-12 col-xl-4 d-none d-xl-flex">
-                        <div class="card flex-fill w-100">
-                            <div class="card-header">
-                                <div class="card-actions float-end">
-                                    <div class="dropdown position-relative">
-                                        <a href="#" data-bs-toggle="dropdown" data-bs-display="static">
-                                            <i class="align-middle" data-feather="more-horizontal"></i>
-                                        </a>
-
-                                        <div class="dropdown-menu dropdown-menu-end">
-                                            <a class="dropdown-item" href="#">Action</a>
-                                            <a class="dropdown-item" href="#">Another action</a>
-                                            <a class="dropdown-item" href="#">Something else here</a>
-                                        </div>
-                                    </div>
-                                </div>
-                                <h5 class="card-title mb-0">Weekly sales</h5>
-                            </div>
-                            <div class="card-body d-flex">
-                                <div class="align-self-center w-100">
-                                    <div class="py-3">
-                                        <div class="chart chart-xs">
-                                            <canvas id="chartjs-dashboard-pie"></canvas>
-                                        </div>
-                                    </div>
-
-                                    <table class="table mb-0">
-                                        <thead>
-                                        <tr>
-                                            <th>Source</th>
-                                            <th class="text-end">Revenue</th>
-                                            <th class="text-end">Value</th>
-                                        </tr>
-                                        </thead>
-                                        <tbody>
-                                        <tr>
-                                            <td><i class="fas fa-square-full text-primary"></i> Direct</td>
-                                            <td class="text-end">$ 2602</td>
-                                            <td class="text-end text-success">+43%</td>
-                                        </tr>
-                                        <tr>
-                                            <td><i class="fas fa-square-full text-warning"></i> Affiliate</td>
-                                            <td class="text-end">$ 1253</td>
-                                            <td class="text-end text-success">+13%</td>
-                                        </tr>
-                                        <tr>
-                                            <td><i class="fas fa-square-full text-danger"></i> E-mail</td>
-                                            <td class="text-end">$ 541</td>
-                                            <td class="text-end text-success">+24%</td>
-                                        </tr>
-                                        <tr>
-                                            <td><i class="fas fa-square-full text-dark"></i> Other</td>
-                                            <td class="text-end">$ 1465</td>
-                                            <td class="text-end text-success">+11%</td>
-                                        </tr>
-                                        </tbody>
-                                    </table>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-12 col-lg-6 col-xl-4 d-flex">
-                        <div class="card flex-fill w-100">
-                            <div class="card-header">
-                                <div class="card-actions float-end">
-                                    <div class="dropdown position-relative">
-                                        <a href="#" data-bs-toggle="dropdown" data-bs-display="static">
-                                            <i class="align-middle" data-feather="more-horizontal"></i>
-                                        </a>
-
-                                        <div class="dropdown-menu dropdown-menu-end">
-                                            <a class="dropdown-item" href="#">Action</a>
-                                            <a class="dropdown-item" href="#">Another action</a>
-                                            <a class="dropdown-item" href="#">Something else here</a>
-                                        </div>
-                                    </div>
-                                </div>
-                                <h5 class="card-title mb-0">Appointments</h5>
-                            </div>
-                            <div class="card-body">
-                                <ul class="timeline">
-                                    <li class="timeline-item">
-                                        <strong>Chat with Carl and Ashley</strong>
-                                        <span class="float-end text-muted text-sm">30m ago</span>
-                                        <p>Nam pretium turpis et arcu. Duis arcu tortor, suscipit eget, imperdiet nec, imperdiet iaculis, ipsum. Sed aliquam ultrices mauris...</p>
-                                    </li>
-                                    <li class="timeline-item">
-                                        <strong>The big launch</strong>
-                                        <span class="float-end text-muted text-sm">2h ago</span>
-                                        <p>Sed aliquam ultrices mauris. Integer ante arcu, accumsan a, consectetuer eget, posuere ut, mauris. Praesent adipiscing. Phasellus ullamcorper ipsum rutrum
-                                            nunc...</p>
-                                    </li>
-                                    <li class="timeline-item">
-                                        <strong>Coffee break</strong>
-                                        <span class="float-end text-muted text-sm">3h ago</span>
-                                        <p>Curabitur ligula sapien, tincidunt non, euismod vitae, posuere imperdiet, leo. Maecenas malesuada...</p>
-                                    </li>
-                                    <li class="timeline-item">
-                                        <strong>Chat with team</strong>
-                                        <span class="float-end text-muted text-sm">30m ago</span>
-                                        <p>Nam pretium turpis et arcu. Duis arcu tortor, suscipit eget, imperdiet nec, imperdiet iaculis, ipsum...</p>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </div>
 
                 <div class="card flex-fill">
                     <div class="card-header">
@@ -763,12 +620,12 @@
                         </tr>
                         </tbody>
                     </table>
-                    {% endblock %}
+
                 </div>
             </div>
 
         </main>
-
+        {% endblock %}
         <footer class="footer">
             <div class="container-fluid">
                 <div class="row text-muted">
