--- a/templates/adminT.html.twig
+++ b/templates/adminT.html.twig
@@ -60,7 +60,7 @@
 <aside class="sidenav navbar navbar-vertical navbar-expand-xs border-0 border-radius-xl my-3 fixed-start ms-3   bg-gradient-dark" id="sidenav-main">
     <div class="sidenav-header">
         <i class="fas fa-times p-3 cursor-pointer text-white opacity-5 position-absolute end-0 top-0 d-none d-xl-none" aria-hidden="true" id="iconSidenav"></i>
-        <a class="navbar-brand m-0" href="{{path('admin1')}} " >
+        <a class="navbar-brand m-0" href="{{path('artisan')}} " >
             <img src="{{asset('adminTe/assets/img/logo.jpg')}}" class="navbar-brand-img  h-100" alt="main_logo">
             <span class="ms-1 font-weight-bold text-white"> Sanaaty </span>
         </a>
@@ -69,7 +69,7 @@
     <div class="collapse navbar-collapse  w-auto  max-height-vh-100" id="sidenav-collapse-main">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link text-white active bg-gradient-primary" href="{{path('admin1')}}">
+                <a class="nav-link text-white active bg-gradient-primary" href="{{path('artisan')}}">
                     <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
                         <i class="material-icons opacity-10">dashboard</i>
                     </div>
@@ -835,6 +835,13 @@
                 <h6 class="mb-0">Navbar Fixed</h6>
                 <div class="form-check form-switch ps-0 ms-auto my-auto">
                     <input class="form-check-input mt-1 ms-auto" type="checkbox" id="navbarFixed" onclick="navbarFixed(this)">
+                </div>
+            </div>
+            <hr class="horizontal dark my-3">
+            <div class="mt-2 d-flex">
+                <h6 class="mb-0">Sidenav Mini</h6>
+                <div class="form-check form-switch ps-0 ms-auto my-auto is-filled">
+                    <input class="form-check-input mt-1 ms-auto" type="checkbox" id="navbarMinimize" onclick="navbarMinimize(this)">
                 </div>
             </div>
             <hr class="horizontal dark my-3">
