--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -52,7 +52,8 @@
 	          <li class="nav-item"><a href="{{path('formation_index')}}" class="nav-link">Formations</a></li>
 	          <li class="nav-item"><a href="{{path('evenement_index')}}" class="nav-link">Évènements</a></li>
 	          <li class="nav-item"><a href="{{path('contact')}}" class="nav-link">Contact</a></li>
-	          <li class="nav-item"><a href="{{path('login')}}" class="nav-link">Compte</a></li>
+
+
 	          <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="room.html" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Shop</a>
               <div class="dropdown-menu" aria-labelledby="dropdown04">
@@ -62,8 +63,17 @@
                 <a class="dropdown-item" href="checkout.html">Checkout</a>
               </div>
             </li>
+				{% if is_granted('ROLE_CLIENT') %}
+				<li class="nav-item"><a href="{{ path('app_logout') }}" class="nav-link">Deconnexion</a></li>
+				{% else %}
+				<li class="nav-item  {% if mainNavLogin is defined %}active{% endif %}" ><a href="{{ path('app_login') }}" class="nav-link">Compte</a></li>
 
+					<li class="nav-item {% if mainNavRegistration is defined %}active{% endif %}">
+						<a class="nav-link" href="{{path('app_register')}}">Inscription</a>
+					</li>
+				{% endif %}
 	          <li class="nav-item cart"><a href="#" class="nav-link"><span class="icon icon-shopping_cart"></span><span class="bag d-flex justify-content-center align-items-center"><small>1</small></span></a></li>
+
 	        </ul>
 	      </div>
 		  </div>
