--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -1,123 +1,194 @@
 
+{% extends 'base.html.twig' %}
+{% block content  %}
+{#
 {% block title %}Register{% endblock %}
 
 {% block body %}
+    {% for flashError in app.flashes('verify_email_error') %}
+        <div class="alert alert-danger" role="alert">{{ flashError }}</div>
+    {% endfor %}
 
+    <h1>Register</h1>
 
-{% block css %}
+    {{ form_start(registrationForm) }}
+    {{ form_row(registrationForm.email) }}
+    {{ form_row(registrationForm.plainPassword, {
+        label: 'Password'
+    }) }}
+    {{ form_row(registrationForm.agreeTerms) }}
 
-
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!--===============================================================================================-->
-    <link rel="icon" type="image/png" href="{{asset('formAdmin/images/icons/favicon.ico')}}"/>
-    <!--===============================================================================================-->
-    <link rel="stylesheet" type="text/css" href="{{asset('formAdmin/vendor/bootstrap/css/bootstrap.min.css')}}">
-    <!--===============================================================================================-->
-    <link rel="stylesheet" type="text/css" href="{{asset('formAdmin/fonts/font-awesome-4.7.0/css/font-awesome.min.css')}}">
-    <!--===============================================================================================-->
-    <link rel="stylesheet" type="text/css" href="{{asset('formAdmin/vendor/animate/animate.css')}}">
-    <!--===============================================================================================-->
-    <link rel="stylesheet" type="text/css" href="{{asset('formAdmin/vendor/css-hamburgers/hamburgers.min.css')}}">
-    <!--===============================================================================================-->
-    <link rel="stylesheet" type="text/css" href="{{asset('formAdmin/vendor/select2/select2.min.css')}}">
-    <!--===============================================================================================-->
-    <link rel="stylesheet" type="text/css" href="{{asset('formAdmin/css/util.css')}}">
-    <link rel="stylesheet" type="text/css" href="{{asset('formAdmin/css/main.css')}}">
-    <!--===============================================================================================-->
-
+    <button type="submit" class="btn">Register</button>
+    {{ form_end(registrationForm) }}
 {% endblock %}
-<body>
+#}
 
-<div class="limiter">
-    <div class="container-login100">
-        <div class="wrap-login100">
-            <div class="login100-pic js-tilt" data-tilt>
-                <img src="{{asset('formAdmin/images/img-01.png')}}" alt="IMG">
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <!-- Required meta tags-->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="Colorlib Templates">
+    <meta name="author" content="Colorlib">
+    <meta name="keywords" content="Colorlib Templates">
+
+    <!-- Title Page-->
+    <title>Au Register Forms by Colorlib</title>
+
+    <!-- Icons font CSS-->
+    <link href="{{asset('UserRegister/vendor/mdi-font/css/material-design-iconic-font.min.css')}}" rel="stylesheet" media="all">
+    <link href="{{asset('UserRegister/vendor/font-awesome-4.7/css/font-awesome.min.css')}}" rel="stylesheet" media="all">
+    <!-- Font special for pages-->
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i" rel="stylesheet">
+
+    <!-- Vendor CSS-->
+    <link href="{{asset('UserRegister/vendor/select2/select2.min.css')}}" rel="stylesheet" media="all">
+    <link href="{{asset('UserRegister/vendor/datepicker/daterangepicker.css')}}" rel="stylesheet" media="all">
+
+    <!-- Main CSS-->
+    <link href="{{asset('UserRegister/css/main.css')}}" rel="stylesheet" media="all">
+</head>
+
+<body style="margin-top: 100px">
+
+    <div class="wrapper wrapper--w790">
+        <div class="card card-5">
+            <div class="card-heading">
+                <h2 class="title">Event Registration Form</h2>
             </div>
-            {% for flashError in app.flashes('verify_email_error') %}
-                <div class="alert alert-danger" role="alert">{{ flashError }}</div>
-            {% endfor %}
+            <div class="card-body">
+                {% for flashError in app.flashes('verify_email_error') %}
+                    <div class="alert alert-danger" role="alert">{{ flashError }}</div>
+                {% endfor %}
+                <form method="POST">
+                    {{ form_start(registrationForm, {'attr': {'novalidate': 'novalidate'}}) }}
+                    {#  <div class="form-row m-b-55">
+                        <div class="name">Name</div>
+                        <div class="value">
+                            <div class="row row-space">
+                                <div class="col-2">
+                                    <div class="input-group-desc">
+                                        {{ form_widget(registrationForm.nom, {'attr': {'class': 'input--style-5'}}) }}
+                                     {#   <input class="input--style-5" type="text" name="first_name">
+                                        <label class="label--desc">first name</label>
+                                    </div>
+                                </div>
+                                <div class="col-2">
+                                    <div class="input-group-desc">
+                                        {{ form_widget(registrationForm.prenom, {'attr': {'class': 'input--style-5'}}) }}
+{#   <input class="input--style-5" type="text" name="last_name">
+                                        <label class="label--desc">last name</label>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>#}
+                    <div class="form-row">
+                        <div class="name">Nom</div>
+                        <div class="value">
+                            <div class="input-group">
+                                {{ form_widget(registrationForm.nom, {'attr': {'class': 'input--style-5'}}) }}
+                                {#  <input class="input--style-5" type="text" name="company">#}
+                            </div>
+                        </div>
+                    </div> <div class="form-row">
+                        <div class="name">Prenom</div>
+                        <div class="value">
+                            <div class="input-group">
+                                {{  form_widget(registrationForm.prenom, {'attr': {'class': 'input--style-5'}}) }}
+                                {#  <input class="input--style-5" type="text" name="company">#}
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-row">
+                        <div class="name">Email</div>
+                        <div class="value">
+                            <div class="input-group">
+                                {{ form_widget(registrationForm.email, {'attr': {'class': 'input--style-5'}}) }}
+                               {#  <input class="input--style-5" type="text" name="company">#}
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-row">
+                        <div class="name">Password</div>
+                        <div class="value">
+                            <div class="input-group">
+                                {{form_widget(registrationForm.plainPassword, {'attr': {'class': 'input--style-5'}}) }}
+                                {#     <input class="input--style-5" type="email" name="email">#}
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-row">
+                        <div class="name">Adresse</div>
+                        <div class="value">
+                            <div class="input-group">
+                                {{ form_widget(registrationForm.adresse, {'attr': {'class': 'input--style-5'}}) }}
+                                {#     <input class="input--style-5" type="email" name="email">#}
+                            </div>
+                        </div>
+                    </div>
 
+                    <div class="form-row">
+                        <div class="name">Compte</div>
+                        <div class="value">
+                            <div class="">
+                                <div class="rs-select2 js-select-simple select--no-search">
+                                    {{ form_widget(registrationForm.roles, {'attr': {'class': ''}}) }}
+                                    {#        <select name="subject">
 
+                                 <option disabled="disabled" selected="selected">Choose option</option>
+                                        <option>Subject 1</option>
+                                        <option>Subject 2</option>
+                                        <option>Subject 3</option>
 
+                                    </select>
+                                    #}
+                                    <div class="select-dropdown"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    {#     <div class="form-row p-t-20">
+                        <label class="label label--block">Are you an existing customer?</label>
+                        <div class="p-t-15">
+                            {{ form_row(registrationForm.agreeTerms, {'attr': {'class': 'radio-container'}}) }}
+                            {#       <label class="radio-container m-r-55">
+                                {{ form_row(registrationForm.agreeTerms) }}
+                          <input type="radio"  checked="checked" name="exist">
+                                <span class="checkmark"></span>
+ <label class="radio-container">No
+                                <input type="radio" name="exist">
+                                <span class="checkmark"></span>
+                            </label>
 
-                {{ form_start(registrationForm, {'attr': {'novalidate': 'novalidate','class':'login100-form validate-form'}}) }}
-            <span class="login100-form-title">
-						Member Login
-					</span>
-                {#  {{ form_row(registrationForm.email) }}#}
-                {# {{ form_row(registrationForm.plainPassword, {  label: 'Password'       }) }} #}
-                {{ form_row(registrationForm.agreeTerms) }}
+                            </label>
 
-                <div class="wrap-input100 validate-input" data-validate = "Valid email is required: ex@abc.xyz">
-                   {#  <input class="input100" type="text" name="email" placeholder="Email">#}
-                    {{ form_widget(registrationForm.email, {'attr': {'class': 'input100'}}) }}
-                    <span class="focus-input100"></span>
-                    <span class="symbol-input100">
-							<i class="fa fa-envelope" aria-hidden="true"></i>
-						</span>
-                </div>
-
-                <div class="wrap-input100 validate-input" data-validate = "Password is required">
-                    {# <input class="input100" type="password" name="pass" placeholder="Password"> #}
-                    {{form_widget(registrationForm.plainPassword, {'attr': {'class': 'input100'}}) }}
-                    <span class="focus-input100"></span>
-                    <span class="symbol-input100">
-							<i class="fa fa-lock" aria-hidden="true"></i>
-						</span>
-                </div>
-
-                <div class="container-login100-form-btn">
-                   {#  <button class="login100-form-btn" type="submit"> Login     </button>#}
-                    {{form_widget(registrationForm.valider, {'attr': {'class': 'login100-form-btn'}}) }}
-                </div>
-            {{ form_end(registrationForm) }}
-                <div class="text-center p-t-12">
-						<span class="txt1">
-							Forgot
-						</span>
-                    <a class="txt2" href="#">
-                        Username / Password?
-                    </a>
-                </div>
-
-                <div class="text-center p-t-136">
-                    <a class="txt2" href="#">
-                        Create your Account
-                        <i class="fa fa-long-arrow-right m-l-5" aria-hidden="true"></i>
-                    </a>
-                </div>
-
+                        </div>
+                    </div> #}
+                    <div>
+                        <button class="btn btn--radius-2 btn--red" type="submit">Register</button>
+                    </div>
+                    {{ form_end(registrationForm) }}
+                </form>
+            </div>
         </div>
     </div>
-</div>
 
 
+<!-- Jquery JS-->
+<script src="{{asset('UserRegister/vendor/jquery/jquery.min.js')}}"></script>
+<!-- Vendor JS-->
+<script src="{{asset('UserRegister/vendor/select2/select2.min.js')}}"></script>
+<script src="{{asset('UserRegister/vendor/datepicker/moment.min.js')}}"></script>
+<script src="{{asset('UserRegister/vendor/datepicker/daterangepicker.js')}}"></script>
 
+<!-- Main JS-->
+<script src="{{asset('UserRegister/js/global.js')}}"></script>
 
-<!--===============================================================================================-->
-<script src="{{asset('formAdmin/vendor/jquery/jquery-3.2.1.min.js')}}"></script>
-<!--===============================================================================================-->
-<script src="{{asset('formAdmin/vendor/bootstrap/js/popper.js')}}"></script>
-<script src="{{asset('formAdmin/vendor/bootstrap/js/bootstrap.min.js')}}"></script>
-<!--===============================================================================================-->
-<script src="{{asset('formAdmin/vendor/select2/select2.min.js')}}"></script>
-<!--===============================================================================================-->
-<script src="{{asset('formAdmin/vendor/tilt/tilt.jquery.min.js')}}"></script>
-<script >
-    $('.js-tilt').tilt({
-        scale: 1.1
-    })
-</script>
-<!--===============================================================================================-->
-<script src="{{asset('formAdmin/js/main.js')}}"></script>
+</body><!-- This templates was made by Colorlib (https://colorlib.com) -->
 
-
+</html>
+<!-- end document-->
 {% endblock %}
-
-
-
-
-
-
